fix: update avatar styling on mobile

--- a/app/components/Chats/chats_main.css
+++ b/app/components/Chats/chats_main.css
@@ -236,6 +236,7 @@
 	}
 
 	.avatar {
+		margin-left: 3rem;
 		width: 35px;
 		height: 35px;
 	}
